# bear-engine

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  bear-engine.sln  build.rs  configuration.h  debug.h  demo.c  demo.cpp  dllmain.cpp  engine_dll.c  engine_dll.cpp  engine_dll.def  engine_dll_core.c  engine_dll_core.cpp  engine_dll_draw.c  engine_dll_draw.cpp  engine_dll_error.c  engine_dll_error.cpp  engine_dll_texture.c  engine_dll_texture.cpp  engine_dll_window.c  engine_dll_window.cpp  engine_resources.rc  engine_types.h  framework.h  resource.h  utils.h
.github/workflows/: rust.yml
arch/: architecture.org
bear-engine/: Engine.cpp  Engine.h  Shapes.cpp  Shapes.h  basic_types.h  bear-engine.vcxproj  bear-engine.vcxproj.filters  dllmain.txt  engine_dll_core.cpp  engine_dll_texture.cpp  engine_types.h  pch.h  utils.h
bear-engine-dll/: bear-engine-dll.vcxproj  bear-engine-dll.vcxproj.filters  dllmain.cpp  engine_dll_core.cpp  engine_dll_draw.cpp  engine_dll_texture.cpp  engine_types.h  utils.h
config/: log4rs.yaml
demo/: demo.cpp  demo.vcxproj
demo-project/: demo-project.cpp  demo-project.vcxproj  demo-project.vcxproj.filters
include/core/: auto_release.hpp  context.hpp  engine.hpp  graphics_exceptions.hpp  safe_initialize.hpp
include/datatypes/: texture.hpp
include/log/: logger.hpp
lib/assimp/: assimp-vc143-mtd.exp  assimp-vc143-mtd.lib
shaders/: fs.glsl  vs.glsl
shaders/lighting/: basic_light_fs.glsl  color_fs..glsl
src/: CMakeLists.txt  main.cpp  main.rs
src/circuit/: mod.rs  qcircuit.rs
src/core/: context.cpp  engine.cpp  safe_initialize.cpp
src/datatypes/: texture.cpp
src/draw/: camera.rs  draw.rs  lib.rs  light.rs  mesh.rs  mod.rs  model.rs  render.rs  shaders.rs  shape.rs  shape2d.rs  shape3d.rs  textures.rs  transformations.rs  vertex.rs
src/editor/: editor_state.rs  mod.rs
src/log/: log.rs  logger.cpp  mod.rs
src/utils/: coordinates.rs  file.rs  mod.rs
src/window/: imgui_manager.rs  mod.rs  window_manager.rs
utils/: multiple_light_patterns  plot.py
